Updated project writeup
All that's left is the explanation of how the statistic is calculated.

--- a/project_part3.ipynb
+++ b/project_part3.ipynb
@@ -8,15 +8,14 @@
     "### CSCI 4831 Sabermetrics ###\n",
     "### Jacob Hallberg and Lindsay Walton ###\n",
     "\n",
-    "In sabermetrics, there are a variety of statistics used to evaluate the skill of a batter. Statistics such as batting average, slugging, on-base percentage, strikeouts, and other similar statistics evaluate the overall skill of a batter. None of these statistics consider a batter’s ability to hit varying types of pitches, just the batter’s ability to hit pitches as a whole. Some pitchers may be able to effectively hit all types of pitches, while others may only be able to be effective pitchers for fastballs. The Speciality Score statistic aims to gauge a batter’s ability to hit “speciality” pitches such as curveballs, sliders, changeups, and so on. Batters with high batting skill for these speciality pitches will have a high speciality score while batter with less skill for these pitches will have a lower speciality score. This statistic could be used to identify batters with a unique batting skill as compared to other batters. \n",
+    "In sabermetrics, there are a variety of statistics used to evaluate the skill of a batter. Statistics such as batting average, slugging, on-base percentage, strikeouts, and other similar statistics evaluate the overall skill of a batter. None of these statistics consider a batter’s ability to hit varying types of pitches, just the batter’s ability to hit pitches as a whole. Some pitchers may be able to effectively hit all types of pitches, while others may only be able to be effective pitchers for fastballs. The Speciality Score statistic aims to gauge a batter’s ability to hit \"speciality\" pitches such as curveballs, sliders, changeups, and so on. Batters with high batting skill for these speciality pitches will have a high speciality score while batter with less skill for these pitches will have a lower speciality score. \n",
     "\n",
-    "The statistic will be calculated using the Statcast data. For each batter, we will collect information about the pitches that they’ve hit. To determine information about the pitch, we will collect pitch type and pitch speed. To determine information about the batter’s hitting and how successful that hit was, we will collect batted ball launch speed, the resulting event of the plate appearance and launch speed/angle zone based on launch angle and exit velocity (which categorizes hits into one of the following types: weak, topped, under, flare/burner, solid contact, or barrel). We may also consider using the statcast data points Estimated Batting Avg based on launch angle and exit velocity, and Estimated wOBA based on launch angle and exit velocity.\n",
+    "This statistic could be used to identify batters with a unique batting skill as compared to other batters. A team manager could use this information to ensure that the team is well-balanced in terms of batting ability: a team needs batters that are able to excel against specialty pitches. Pitchers could also benefit from this information by using against batters with low specialty scores. If a pitcher is going to pitch to a batter who has a low specialty score, then he can throw specialty pitches to the batter. \n",
     "\n",
-    "We will group the batter’s hits by pitch type. For each pitch type, we will use the batting information described above to determine how effective the hit was. This information will be aggregated together by pitch type and summed to give the player’s specialty score. Each pitch type will be weighted by some value such that pitches like curveballs, changeups, and sliders will be valued more than fastballs. \n",
+    "The statistic is presented with a website: http://specialtyscore.herokuapp.com/. A user can access the website and read some information about the statistic and how it is calculated. A user can enter a Major League Baseball player’s name and see his Specialty Score. The Specialty Scores will be available for all players that have enough Statcast data for which we can calculate their score.\n",
     "\n",
-    "The statistic will be presented with a website. A user will be able to access the website and read some information about the statistic and how it is calculated. A user will be able to enter a Major League Baseball player’s name and see his Specialty Score. The Specialty Scores will be available for all players that have enough Statcast data for which we can calculate their score.\n",
-    "\n",
-    "\n"
+    "### Explanation of the Specialty Score ###\n",
+    "TODO Jacob's stuff"
    ]
   },
   {
@@ -30,10 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import necessary modules\n",
     "from pybaseball.lahman import *\n",
     "import pandas as pd\n",
     "import pybaseball\n",
@@ -46,10 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read in all necessary data\n",
     "data = pd.read_csv(\"specialty_data.csv\")\n",
     "data['full_name'] = data['name_first'].str.capitalize() + ' ' + data['name_last'].str.capitalize()\n",
     "batters = batting_stats(2014, end_season=2018, league='all', qual=200, ind=1)\n",
@@ -61,21 +62,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Specialty Score vs. OBP #####"
+    "#### Specialty Score vs. OBP ####"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f554ed50b38>"
+       "<matplotlib.legend.Legend at 0x7fa02cdb3b00>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -106,17 +107,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Specialty Score vs. RBI ####"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f55493665f8>"
+       "<matplotlib.legend.Legend at 0x7fa02d6c4278>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -144,6 +152,13 @@
     "ax.set_xlabel(\"RBI\", fontsize=16)\n",
     "ax.set_ylabel(\"Specialty Score\", fontsize=16)\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Specialty Score vs. SLG ####"
    ]
   },
   {
@@ -188,6 +203,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Specialty Score vs. OPS ####"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -226,6 +248,13 @@
     "ax.set_xlabel(\"OPS\", fontsize=16)\n",
     "ax.set_ylabel(\"Specialty Score\", fontsize=16)\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Specialty Score vs. HR ####"
    ]
   },
   {
@@ -270,6 +299,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Specialty Score vs. BA ####"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -308,6 +344,13 @@
     "ax.set_xlabel(\"BA\", fontsize=16)\n",
     "ax.set_ylabel(\"Specialty Score\", fontsize=16)\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Specialty Score vs. WAR ####"
    ]
   },
   {
@@ -352,17 +395,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "all_data['BA'] = all_data['H'] / all_data['AB']"
+    "#### Taking a Closer Look ####\n",
+    "\n",
+    "As we can see from the linear regressions graphed above, Specialty Score has a positive correlation with most batting statistics (all but HR). Batting average and Wins Above Replacement appear to have the highest correlation to Specialty Score. How much are theses values correlated? We can calculate the R-squared values to determine this. First we'll use a multiple regression model to determine how much BA and WAR together correlate with Specialty Score. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -371,38 +414,36 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:       speciality_score   R-squared:                       0.105\n",
-      "Model:                            OLS   Adj. R-squared:                  0.104\n",
-      "Method:                 Least Squares   F-statistic:                     95.24\n",
-      "Date:                Mon, 29 Apr 2019   Prob (F-statistic):           7.92e-40\n",
-      "Time:                        16:25:07   Log-Likelihood:                -8882.6\n",
-      "No. Observations:                1619   AIC:                         1.777e+04\n",
-      "Df Residuals:                    1616   BIC:                         1.779e+04\n",
+      "Dep. Variable:       speciality_score   R-squared:                       0.121\n",
+      "Model:                            OLS   Adj. R-squared:                  0.120\n",
+      "Method:                 Least Squares   F-statistic:                     111.0\n",
+      "Date:                Wed, 01 May 2019   Prob (F-statistic):           6.47e-46\n",
+      "Time:                        00:22:56   Log-Likelihood:                -8868.6\n",
+      "No. Observations:                1619   AIC:                         1.774e+04\n",
+      "Df Residuals:                    1616   BIC:                         1.776e+04\n",
       "Df Model:                           2                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "const        129.2702     12.108     10.677      0.000     105.522     153.018\n",
-      "BA           643.1329     50.714     12.682      0.000     543.660     742.605\n",
-      "RBI           -0.0227      0.063     -0.358      0.721      -0.147       0.102\n",
+      "const         89.7686     14.022      6.402      0.000      62.265     117.272\n",
+      "BA           826.2913     58.018     14.242      0.000     712.492     940.091\n",
+      "WAR           -5.1201      0.961     -5.330      0.000      -7.004      -3.236\n",
       "==============================================================================\n",
-      "Omnibus:                      177.369   Durbin-Watson:                   1.623\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              255.392\n",
-      "Skew:                           0.819   Prob(JB):                     3.49e-56\n",
-      "Kurtosis:                       4.050   Cond. No.                     2.07e+03\n",
+      "Omnibus:                      182.451   Durbin-Watson:                   1.659\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              264.332\n",
+      "Skew:                           0.835   Prob(JB):                     3.99e-58\n",
+      "Kurtosis:                       4.062   Cond. No.                         110.\n",
       "==============================================================================\n",
       "\n",
       "Warnings:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The condition number is large, 2.07e+03. This might indicate that there are\n",
-      "strong multicollinearity or other numerical problems.\n"
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
      ]
     }
    ],
    "source": [
     "# Collect the features in a 2D array \n",
-    "X = all_data[[\"BA\", \"RBI\"]]\n",
+    "X = all_data[[\"BA\", \"WAR\"]]\n",
     "# Add a constant to the array for the intercept\n",
     "#You need a good reason if you don't have an intercept\n",
     "X = sm.add_constant(X)\n",
@@ -418,8 +459,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Batting Average seems to have the highest correlation with Specialty Score out of all of the above statistics. We can calculate the R-squared value to see how much it correlates. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -431,8 +479,8 @@
       "Dep. Variable:       speciality_score   R-squared:                       0.105\n",
       "Model:                            OLS   Adj. R-squared:                  0.105\n",
       "Method:                 Least Squares   F-statistic:                     190.5\n",
-      "Date:                Mon, 29 Apr 2019   Prob (F-statistic):           4.86e-41\n",
-      "Time:                        16:25:30   Log-Likelihood:                -8882.7\n",
+      "Date:                Wed, 01 May 2019   Prob (F-statistic):           4.86e-41\n",
+      "Time:                        00:53:05   Log-Likelihood:                -8882.7\n",
       "No. Observations:                1619   AIC:                         1.777e+04\n",
       "Df Residuals:                    1617   BIC:                         1.778e+04\n",
       "Df Model:                           1                                         \n",
@@ -469,6 +517,15 @@
     "\n",
     "#How good is the fit?\n",
     "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BA and WAR together had an R-squared value of 0.121. This means that these statistics can only account for 12.1% of the correlation with Specialty Score. BA alone had an R-squared value of 0.105, which means that BA can only account for 10.5% of the correlation with Specialty Score. Neither one of these statistics correlate well with Specialty Score. \n",
+    "\n",
+    "This lack of similarity to other batting statistics is to be expected. All of the batting statistics shown above test a batter's general batting skill: ability to hit home runs, ability to make contact with the bat regularly, ability to get on-base, and so on. None of these statistics test a batter's skill in niche situations such as different batting scenarios or different types of pitches. The only other \"niche\" batting statistic is Clutch which tests a batter's ability to perform well in high-leverage situations. This situation was deemed so different from the Specialty Score's test of different pitches that it wasn't considered meaningful to compare the two statistics. The effectiveness of the Specialty Score statistic cannot be determined by comparing it to other statistics because it isn't like other statistics. The goal of creating the Specialty Score was to fill this void in the batting skills: cover a situation that isn't covered by other statistics. "
    ]
   },
   {
